gccida/g0/loop_givs_dead_check
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5155:1: error: use of undeclared identifier 'induction_1'
induction_1 *v1; // [rsp+10h] [rbp-10h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5155:14: error: use of undeclared identifier 'v1'
induction_1 *v1; // [rsp+10h] [rbp-10h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5156:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+18h] [rbp-8h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5156:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+18h] [rbp-8h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5158:7: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5158:22: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5158:25: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5158:29: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5160:21: error: use of undeclared identifier 'v'
if ( ( *( ( _BYTE *)v + 100) & 4) == 0 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5161:33: error: use of undeclared identifier 'v'
&& ( !v->same || ( *( ( _BYTE *)v->same + 100) & 4) == 0) 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5161:7: error: use of undeclared identifier 'v'
&& ( !v->same || ( *( ( _BYTE *)v->same + 100) & 4) == 0) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5162:4: error: use of undeclared identifier 'v'
&& v->giv_type == DEST_REG 
   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5163:35: error: use of undeclared identifier 'v'
&& *( _DWORD *)reg_n_info->data.l[v->dest_reg->fld[0].rtuint] == v->insn->fld[0].rtint ) 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5163:66: error: use of undeclared identifier 'v'
&& *( _DWORD *)reg_n_info->data.l[v->dest_reg->fld[0].rtuint] == v->insn->fld[0].rtint ) 
                                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5165:7: error: use of undeclared identifier 'v1'
for ( v1 = bl_0->giv; v1; v1 = v1->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5165:23: error: use of undeclared identifier 'v1'
for ( v1 = bl_0->giv; v1; v1 = v1->next_iv ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5165:27: error: use of undeclared identifier 'v1'
for ( v1 = bl_0->giv; v1; v1 = v1->next_iv ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5165:32: error: use of undeclared identifier 'v1'
for ( v1 = bl_0->giv; v1; v1 = v1->next_iv ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/loop.c:5167:39: error: use of undeclared identifier 'v'
if ( *( _DWORD *)( reg_n_info->data.l[v->dest_reg->fld[0].rtuint] + 4) == v1->insn->fld[0].rtint ) 
                                      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_dead_check/src/obj/loop.o] Error 1
